# aula_06_bootcamp

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  teste_pre_commit.py
