[project]
name = "aula-06-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "vitorspada",email = "vitorspada.rs@gmail.com"}
]
readme = "README.md"
requires-python =  ">=3.13,<4.0"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = """
isort teste_pre_commit.py
black teste_pre_commit.py
flake8 teste_pre_commit.py
"""